--- a/notebooks/a2c.ipynb
+++ b/notebooks/a2c.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "future-trinidad",
    "metadata": {},
    "source": [
     "## Overview of A2C\n",
@@ -60,7 +59,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spoken-drink",
    "metadata": {},
    "source": [
     "## Stability\n",
@@ -78,7 +76,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regional-trinidad",
    "metadata": {},
    "source": [
     "## Some debug work"
@@ -87,7 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "occupational-creativity",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +103,6 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "contained-desert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +112,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rolled-checkout",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +120,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wireless-cambridge",
    "metadata": {},
    "source": [
     "## Experiments: impact of number of parallel envs to stability\n",
@@ -135,8 +128,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rlalgos.A2C.a2c import A2C\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
-   "id": "improving-substitute",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +173,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "played-bride",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +185,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "forty-representation",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "brief-institution",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +236,6 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "authentic-wednesday",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +265,6 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "other-mechanism",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +293,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "colonial-treasurer",
    "metadata": {},
    "source": [
     "## N && B: a few techniques to make training is stable"
@@ -304,7 +300,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "canadian-fitting",
    "metadata": {},
    "source": [
     "## Clip gradients or not"
@@ -313,7 +308,6 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "another-compiler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +340,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "horizontal-finnish",
    "metadata": {},
    "source": [
     "### Std of moving average reward "
@@ -355,7 +348,6 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "complex-uniform",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +370,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "scenic-community",
    "metadata": {},
    "source": [
     "### Std of loss"
@@ -387,7 +378,6 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "appreciated-hardwood",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +400,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "helpful-short",
    "metadata": {},
    "source": [
     "## Length of each trajectory\n",
@@ -424,7 +413,6 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "duplicate-mongolia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +442,6 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "included-merchant",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +490,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "selected-acceptance",
    "metadata": {},
    "source": [
     "# Oops! Pitfall\n",
@@ -522,7 +508,6 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "educated-reminder",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +557,6 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "dangerous-hypothesis",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +606,6 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "conservative-sweet",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +655,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blind-softball",
    "metadata": {},
    "source": [
     "Our intuition seems to be right here. "
@@ -680,7 +662,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supreme-lawrence",
    "metadata": {},
    "source": [
     "## clip output of critic\n",
@@ -689,7 +670,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "careful-cloud",
    "metadata": {},
    "source": [
     "## N && B: encourage exploration\n",
@@ -718,7 +698,6 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "worthy-writing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +731,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stone-brief",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -760,7 +738,6 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "incident-bangkok",
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +763,6 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "stunning-garage",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +787,6 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "outdoor-governor",
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +836,6 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "assisted-tender",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +856,6 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "medieval-general",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +876,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cultural-freeware",
    "metadata": {},
    "source": [
     "## N && B: check if critic is learning anything by viewing the estimate of initial state\n",
@@ -914,7 +886,6 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "plain-involvement",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +928,6 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "infinite-passion",
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +967,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "persistent-complement",
    "metadata": {},
    "source": [
     "## N && B: policy net and value net initialization\n",
@@ -1009,7 +978,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spoken-participant",
    "metadata": {},
    "source": [
     "## N && B: separate backbone or 1 backbone\n",
@@ -1018,7 +986,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quality-appraisal",
    "metadata": {},
    "source": [
     "## N && B: when something is wrong, look at what the policy is doing\n",
@@ -1028,7 +995,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "boolean-coupon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1017,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ruled-valve",
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1092,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "after-technician",
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1146,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "pregnant-architecture",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1200,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patent-experiment",
    "metadata": {},
    "source": [
     "## Inspect logs from training\n",
@@ -1247,7 +1209,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "shaped-generator",
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1358,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "educational-racing",
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1579,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ultimate-satin",
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1630,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sweet-musician",
    "metadata": {},
    "source": [
     "## pass this trained agent to TrajectorySampler\n",
@@ -1682,7 +1640,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "injured-voice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1698,7 +1655,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "critical-float",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1664,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "handy-commercial",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1684,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "further-pointer",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1712,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "delayed-russell",
    "metadata": {},
    "outputs": [
     {
@@ -1906,9 +1859,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Environment (conda_pytorch_p36)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1920,7 +1873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
