updated example notebooks

--- a/notebooks/A2C_sagemaker.ipynb
+++ b/notebooks/A2C_sagemaker.ipynb
@@ -13,6 +13,165 @@
    "source": [
     "Fine tune the docker file from aws/deep-learning-containers"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-09-10 20:33:12 Starting - Starting the training job...\n",
+      "2021-09-10 20:33:36 Starting - Launching requested ML instancesProfilerReport-1631305992: InProgress\n",
+      "......\n",
+      "2021-09-10 20:34:36 Starting - Preparing the instances for training......\n",
+      "2021-09-10 20:35:43 Downloading - Downloading input data\n",
+      "2021-09-10 20:35:43 Training - Downloading the training image............\n",
+      "2021-09-10 20:37:44 Uploading - Uploading generated training model\n",
+      "2021-09-10 20:37:44 Failed - Training job failed\n",
+      "\u001b[34mbash: cannot set terminal process group (-1): Inappropriate ioctl for device\u001b[0m\n",
+      "\u001b[34mbash: no job control in this shell\u001b[0m\n",
+      "\u001b[34m2021-09-10 20:37:32,756 sagemaker-training-toolkit INFO     Imported framework sagemaker_pytorch_container.training\u001b[0m\n",
+      "\u001b[34m2021-09-10 20:37:32,757 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2021-09-10 20:37:32,765 sagemaker_pytorch_container.training INFO     Block until all host DNS lookups succeed.\u001b[0m\n",
+      "\u001b[34m2021-09-10 20:37:38,985 sagemaker_pytorch_container.training INFO     Invoking user training script.\u001b[0m\n",
+      "\u001b[34m2021-09-10 20:37:39,289 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2021-09-10 20:37:39,299 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2021-09-10 20:37:39,308 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2021-09-10 20:37:39,315 sagemaker-training-toolkit INFO     Invoking user script\n",
+      "\u001b[0m\n",
+      "\u001b[34mTraining Env:\n",
+      "\u001b[0m\n",
+      "\u001b[34m{\n",
+      "    \"additional_framework_parameters\": {},\n",
+      "    \"channel_input_dirs\": {},\n",
+      "    \"current_host\": \"algo-1\",\n",
+      "    \"framework_module\": \"sagemaker_pytorch_container.training:main\",\n",
+      "    \"hosts\": [\n",
+      "        \"algo-1\"\n",
+      "    ],\n",
+      "    \"hyperparameters\": {},\n",
+      "    \"input_config_dir\": \"/opt/ml/input/config\",\n",
+      "    \"input_data_config\": {},\n",
+      "    \"input_dir\": \"/opt/ml/input\",\n",
+      "    \"is_master\": true,\n",
+      "    \"job_name\": \"pt-2021-09-10-20-33-12-148\",\n",
+      "    \"log_level\": 20,\n",
+      "    \"master_hostname\": \"algo-1\",\n",
+      "    \"model_dir\": \"/opt/ml/model\",\n",
+      "    \"module_dir\": \"s3://sagemaker-us-west-2-578276202366/pt-2021-09-10-20-33-12-148/source/sourcedir.tar.gz\",\n",
+      "    \"module_name\": \"a2c_cartpole\",\n",
+      "    \"network_interface_name\": \"eth0\",\n",
+      "    \"num_cpus\": 8,\n",
+      "    \"num_gpus\": 0,\n",
+      "    \"output_data_dir\": \"/opt/ml/output/data\",\n",
+      "    \"output_dir\": \"/opt/ml/output\",\n",
+      "    \"output_intermediate_dir\": \"/opt/ml/output/intermediate\",\n",
+      "    \"resource_config\": {\n",
+      "        \"current_host\": \"algo-1\",\n",
+      "        \"hosts\": [\n",
+      "            \"algo-1\"\n",
+      "        ],\n",
+      "        \"network_interface_name\": \"eth0\"\n",
+      "    },\n",
+      "    \"user_entry_point\": \"a2c_cartpole.py\"\u001b[0m\n",
+      "\u001b[34m}\n",
+      "\u001b[0m\n",
+      "\u001b[34mEnvironment variables:\n",
+      "\u001b[0m\n",
+      "\u001b[34mSM_HOSTS=[\"algo-1\"]\u001b[0m\n",
+      "\u001b[34mSM_NETWORK_INTERFACE_NAME=eth0\u001b[0m\n",
+      "\u001b[34mSM_HPS={}\u001b[0m\n",
+      "\u001b[34mSM_USER_ENTRY_POINT=a2c_cartpole.py\u001b[0m\n",
+      "\u001b[34mSM_FRAMEWORK_PARAMS={}\u001b[0m\n",
+      "\u001b[34mSM_RESOURCE_CONFIG={\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"eth0\"}\u001b[0m\n",
+      "\u001b[34mSM_INPUT_DATA_CONFIG={}\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_DATA_DIR=/opt/ml/output/data\u001b[0m\n",
+      "\u001b[34mSM_CHANNELS=[]\u001b[0m\n",
+      "\u001b[34mSM_CURRENT_HOST=algo-1\u001b[0m\n",
+      "\u001b[34mSM_MODULE_NAME=a2c_cartpole\u001b[0m\n",
+      "\u001b[34mSM_LOG_LEVEL=20\u001b[0m\n",
+      "\u001b[34mSM_FRAMEWORK_MODULE=sagemaker_pytorch_container.training:main\u001b[0m\n",
+      "\u001b[34mSM_INPUT_DIR=/opt/ml/input\u001b[0m\n",
+      "\u001b[34mSM_INPUT_CONFIG_DIR=/opt/ml/input/config\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_DIR=/opt/ml/output\u001b[0m\n",
+      "\u001b[34mSM_NUM_CPUS=8\u001b[0m\n",
+      "\u001b[34mSM_NUM_GPUS=0\u001b[0m\n",
+      "\u001b[34mSM_MODEL_DIR=/opt/ml/model\u001b[0m\n",
+      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-us-west-2-578276202366/pt-2021-09-10-20-33-12-148/source/sourcedir.tar.gz\u001b[0m\n",
+      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_pytorch_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"pt-2021-09-10-20-33-12-148\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-west-2-578276202366/pt-2021-09-10-20-33-12-148/source/sourcedir.tar.gz\",\"module_name\":\"a2c_cartpole\",\"network_interface_name\":\"eth0\",\"num_cpus\":8,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"a2c_cartpole.py\"}\u001b[0m\n",
+      "\u001b[34mSM_USER_ARGS=[]\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\u001b[0m\n",
+      "\u001b[34mPYTHONPATH=/opt/ml/code:/opt/conda/bin:/opt/conda/lib/python36.zip:/opt/conda/lib/python3.6:/opt/conda/lib/python3.6/lib-dynload:/opt/conda/lib/python3.6/site-packages:/RL-nuts-and-bolts\n",
+      "\u001b[0m\n",
+      "\u001b[34mInvoking script with the following command:\n",
+      "\u001b[0m\n",
+      "\u001b[34m/opt/conda/bin/python3.6 a2c_cartpole.py\n",
+      "\n",
+      "\u001b[0m\n",
+      "\u001b[34mTraceback (most recent call last):\n",
+      "  File \"a2c_cartpole.py\", line 4, in <module>\n",
+      "    from rlalgos.A2C.a2c import A2C\n",
+      "  File \"/RL-nuts-and-bolts/rlalgos/A2C/a2c.py\", line 13, in <module>\n",
+      "    from rlkits.sampler import ParallelEnvTrajectorySampler\n",
+      "  File \"/RL-nuts-and-bolts/rlkits/sampler.py\", line 4, in <module>\n",
+      "    from ipdb import set_trace\u001b[0m\n",
+      "\u001b[34mModuleNotFoundError: No module named 'ipdb'\n",
+      "\u001b[0m\n",
+      "\u001b[34m2021-09-10 20:37:39,625 sagemaker-training-toolkit ERROR    ExecuteUserScriptError:\u001b[0m\n",
+      "\u001b[34mCommand \"/opt/conda/bin/python3.6 a2c_cartpole.py\"\u001b[0m\n",
+      "\u001b[34mTraceback (most recent call last):\n",
+      "  File \"a2c_cartpole.py\", line 4, in <module>\n",
+      "    from rlalgos.A2C.a2c import A2C\n",
+      "  File \"/RL-nuts-and-bolts/rlalgos/A2C/a2c.py\", line 13, in <module>\n",
+      "    from rlkits.sampler import ParallelEnvTrajectorySampler\n",
+      "  File \"/RL-nuts-and-bolts/rlkits/sampler.py\", line 4, in <module>\n",
+      "    from ipdb import set_trace\u001b[0m\n",
+      "\u001b[34mModuleNotFoundError: No module named 'ipdb'\u001b[0m\n"
+     ]
+    },
+    {
+     "ename": "UnexpectedStatusException",
+     "evalue": "Error for Training job pt-2021-09-10-20-33-12-148: Failed. Reason: AlgorithmError: ExecuteUserScriptError:\nCommand \"/opt/conda/bin/python3.6 a2c_cartpole.py\"\nTraceback (most recent call last):\n  File \"a2c_cartpole.py\", line 4, in <module>\n    from rlalgos.A2C.a2c import A2C\n  File \"/RL-nuts-and-bolts/rlalgos/A2C/a2c.py\", line 13, in <module>\n    from rlkits.sampler import ParallelEnvTrajectorySampler\n  File \"/RL-nuts-and-bolts/rlkits/sampler.py\", line 4, in <module>\n    from ipdb import set_trace\nModuleNotFoundError: No module named 'ipdb'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnexpectedStatusException\u001b[0m                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-12976cec2344>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m )\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/sagemaker/estimator.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, inputs, wait, logs, job_name, experiment_config)\u001b[0m\n\u001b[1;32m    680\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjobs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlatest_training_job\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    681\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mwait\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 682\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlatest_training_job\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlogs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    683\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    684\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_compilation_job_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/sagemaker/estimator.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, logs)\u001b[0m\n\u001b[1;32m   1625\u001b[0m         \u001b[0;31m# If logs are requested, call logs_for_jobs.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1626\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlogs\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"None\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1627\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogs_for_job\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwait\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlog_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlogs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1628\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1629\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait_for_job\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/sagemaker/session.py\u001b[0m in \u001b[0;36mlogs_for_job\u001b[0;34m(self, job_name, wait, poll, log_type)\u001b[0m\n\u001b[1;32m   3731\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3732\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mwait\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3733\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_job_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdescription\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"TrainingJobStatus\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3734\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mdot\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3735\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/sagemaker/session.py\u001b[0m in \u001b[0;36m_check_job_status\u001b[0;34m(self, job, desc, status_key_name)\u001b[0m\n\u001b[1;32m   3291\u001b[0m                 ),\n\u001b[1;32m   3292\u001b[0m                 \u001b[0mallowed_statuses\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Completed\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Stopped\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3293\u001b[0;31m                 \u001b[0mactual_status\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3294\u001b[0m             )\n\u001b[1;32m   3295\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnexpectedStatusException\u001b[0m: Error for Training job pt-2021-09-10-20-33-12-148: Failed. Reason: AlgorithmError: ExecuteUserScriptError:\nCommand \"/opt/conda/bin/python3.6 a2c_cartpole.py\"\nTraceback (most recent call last):\n  File \"a2c_cartpole.py\", line 4, in <module>\n    from rlalgos.A2C.a2c import A2C\n  File \"/RL-nuts-and-bolts/rlalgos/A2C/a2c.py\", line 13, in <module>\n    from rlkits.sampler import ParallelEnvTrajectorySampler\n  File \"/RL-nuts-and-bolts/rlkits/sampler.py\", line 4, in <module>\n    from ipdb import set_trace\nModuleNotFoundError: No module named 'ipdb'"
+     ]
+    }
+   ],
+   "source": [
+    "import sagemaker\n",
+    "from sagemaker.pytorch import PyTorch\n",
+    "\n",
+    "sess = sagemaker.Session()\n",
+    "ecr_image = \"578276202366.dkr.ecr.us-west-2.amazonaws.com/pt:cpu\"\n",
+    "role=\"arn:aws:iam::578276202366:role/service-role/AmazonSageMaker-ExecutionRole-20180626T134894\"\n",
+    "\n",
+    "script = \"/home/ubuntu/RL/RL-nuts-and-bolts/examples/a2c_cartpole.py\"\n",
+    "output_path = \"s3://\" + sess.default_bucket() + \"/a2c/cartpole\"\n",
+    "\n",
+    "est = PyTorch(\n",
+    "    image_uri=ecr_image,\n",
+    "    entry_point=script,\n",
+    "    role=role,\n",
+    "    instance_type=\"ml.c5.2xlarge\",\n",
+    "    instance_count=1,\n",
+    "    output_path=output_path,\n",
+    ")\n",
+    "\n",
+    "est.fit()"
+   ]
   }
  ],
  "metadata": {
@@ -31,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
