--- a/theory/macro.sty
+++ b/theory/macro.sty
@@ -22,6 +22,8 @@ hyperref,%\autoref
 \newcommand{\argmin}{\text{argmin}}
 \newcommand{\E}{\mathbb{E}}
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\A}{\mathbb{A}}
+\renewcommand{\S}{\mathbb{S}}
 \newcommand{\oldpi}{\pi_{\theta_{\text{old}}}}
 \newcommand{\thetapi}{\pi_{\theta}}
 \newcommand{\KL}{\text{KL}}
